--- a/jsnack5/index.html
+++ b/jsnack5/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>crea arrray solo di dispari</title>
+  <title>crea arrray solo di dispari e pari</title>
 </head>
 
 <body>
